--- a/layouts/partials/head_custom.html
+++ b/layouts/partials/head_custom.html
@@ -2,3 +2,8 @@
 If you want to include any custom html just before </head>, put it in /layouts/head_custom.html
 Do not put anything in this file - it's only here so that hugo won't throw an error if /layouts/head_custom.html doesn't exist.
 -->
+{{ if .Params.mathjax }}
+<script type="text/javascript" async
+  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML">
+</script>
+{{ end }}
