--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -39,13 +39,13 @@
   <!-- Hugo Version number -->
   {{ .Hugo.Generator -}}
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
-  <link rel="stylesheet" href="{{ .Site.BaseURL }}css/style.css" />
+  <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/style.css" />
   {{- with .Site.Params.favicon }}
   <link rel='icon' type='image/x-icon' href="{{ . | absURL }}" />
   {{- end -}}
   {{ if eq .URL "/" }}
   <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
   {{ end }}
-  <script type="text/javascript" src="{{ .Site.BaseURL }}js/bundle.js"></script>
+  <script type="text/javascript" src="{{ .Site.BaseURL }}/js/bundle.js"></script>
   {{ partial "head_custom.html" . }}
 </head>
